# ParallelCBF

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
docs/: POSITION.md  index.md
docs/api/: algorithms.md  api.md  ops.md  safety.md
docs/tutorials/: 01_quickstart.ipynb  02_custom_safety_filter.ipynb  03_auditable_training.ipynb
parallelcbf/: __init__.py
parallelcbf/algorithms/: __init__.py  random_action.py
parallelcbf/api/: __init__.py  core.py  types.py  wrappers.py
parallelcbf/envs/: __init__.py  toy2d.py  toy2d_vec.py
parallelcbf/models/: __init__.py  mamba_backbone.py
parallelcbf/ops/: __init__.py  checkpointing.py  forensics.py  preregistration.py  telemetry.py  watchdogs.py
parallelcbf/safety/: __init__.py  dual_barrier.py
scripts/: aggregate_v23_bc_dataset.py  verify_bc_artifact.py
stubs/gymnasium/: __init__.pyi
tests/: conftest.py  test_day4_ops.py  test_dual_barrier_torch.py  test_position.py  test_readme_quickstart.py  test_safety.py
